--- a/index.css
+++ b/index.css
@@ -10,7 +10,6 @@
 	font-size: 14px;
 	color: rgb(0, 116, 130);
 }
-
 .BW-WebPositionPage .LG-RichTextContent {
     margin: 0;
 }
@@ -19,7 +18,12 @@
     margin: 0% 10% 0% 10%;
     box-shadow: 0 18px 46px rgba(0,0,0,0.70);
 }
-
+@media screen and (max-width: 1260px) {
+  .BW-MainPanel {
+    width: 100%;
+    margin: 0%;
+}
+}
 .LG-RichTextContent p:not(.BW-WebPositionPage){
 	padding: 0 10px 0 20px!important;
 }
@@ -38,7 +42,6 @@
 	font-size: 14px;
 	color: rgb(0, 116, 130);
 }
-
 .BW-WebPositionPage .LG-RichTextContent {
     margin: 0;
 }
@@ -65,9 +68,6 @@
 .LG-RichTextContent ul{
 	margin: 10px;
 }
-
-
-
 .LG-BoxPanel{
 	margin: 20px;
 }
@@ -91,10 +91,8 @@ li {
     background-size: 22px;
     transition: transform 0.3s;
 }
-
 li:hover {
   background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg style="color: rgb(0, 116, 130)" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="40" zoomAndPan="magnify" viewBox="0 0 30 30.000001" height="40" preserveAspectRatio="xMidYMid meet" version="1.0"%3E%3Cdefs%3E%3CclipPath id="id1"%3E%3Cpath d="M 2.328125 4.222656 L 27.734375 4.222656 L 27.734375 24.542969 L 2.328125 24.542969 Z M 2.328125 4.222656 " clip-rule="nonzero" fill="rgb(0, 116, 130)"%3E%3C/path%3E%3C/clipPath%3E%3C/defs%3E%3Cg clip-path="url(%23id1)"%3E%3Cpath fill="rgb(0, 116, 130)" d="M 27.5 7.53125 L 24.464844 4.542969 C 24.15625 4.238281 23.65625 4.238281 23.347656 4.542969 L 11.035156 16.667969 L 6.824219 12.523438 C 6.527344 12.230469 6 12.230469 5.703125 12.523438 L 2.640625 15.539062 C 2.332031 15.84375 2.332031 16.335938 2.640625 16.640625 L 10.445312 24.324219 C 10.59375 24.472656 10.796875 24.554688 11.007812 24.554688 C 11.214844 24.554688 11.417969 24.472656 11.566406 24.324219 L 27.5 8.632812 C 27.648438 8.488281 27.734375 8.289062 27.734375 8.082031 C 27.734375 7.875 27.648438 7.679688 27.5 7.53125 Z M 27.5 7.53125 " fill-opacity="1" fill-rule="nonzero"%3E%3C/path%3E%3C/g%3E%3C/svg%3E');
-
 }
 .LG-InputLabel.LG-InputLabel-required, .LG-InputLabel.hasSemicolon, .hasSemicolon.LG-FormField-ErrorIcon, .hasSemicolon.LG-ComponentsTable-HeaderCell {
 font-family: Calibri;
@@ -110,10 +108,51 @@ color:#000000;
     font-size: 16px;
     height: 55px;
     color: #ffffff;
-    background-color: #006573; 
+    background-color: #006573!important; 
 }
 .LG-Button.primary:hover{
-	background-color:#004f5a;
+	background-color:#004f5a!important;
+}
+.BW-Header .LG-IconButton {
+    margin: 10px;
+}
+.DynaCss-Asterisk-FIRMA-ID .LG-MaskDataTable-Search-Wrapper .LG-SearchBox{
+    background-color: #007684!important;
+}
+.DynaCss-Asterisk-FIRMA-ID .LG-IconButton.ic-link-selected, .DynaCss-Asterisk-FIRMA-ID .LG-MultiIconButtonBase.ic-link-selected {
+    background-color: #007684!important;
+}
+.DynaCss-Asterisk-FIRMA-ID .Bewerber-Web-Common-Heading {
+    color: #007684!important;
+	font-size: 18px;
+    padding-top: 15px;
+	padding-left: 15px;
+}
+.DynaCss-Asterisk-FIRMA-ID .LG-Anchor {
+    color: #007684!important;
+}
+.Bewerber-Web-Common-Info {
+    font-size: 12px;
+	padding-left: 15px;
+}
+.Bewerber-Web-Common-Info .LG-Anchor {
+    font-size: 12px;
+	padding-left: 15px;
+}
+.LG-ScrollPanel {
+    height: 102%;
+}
+@media only screen and (min-width: 1264px)
+@supports (display: grid)
+.embed-responsive {
+    max-width: 1200px;
+}
+.LG-DataTableWidget .LG-DataTableCell > div {
+line-height: 1.8;
+}
+.DynaCss-Asterisk-FIRMA-ID .LG-DataTableEvenRow .LG-DataTableCell, .DynaCss-Asterisk-FIRMA-ID .LG-DataTableOddRow .LG-DataTableCell {
+    padding: 25px;
+    font-size: 1.2em;
 }
 
 
